welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:29: error: ')' expected but 'for' found.
  for (i<-dec+1 to dec+getMondeLargeur())
  ^